# marmolak-user-manager

./: ..env.example.swp  .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/: all_files.txt  file_reader.py
backend/config/: config.yaml  docker.yaml
backend/src/vpn_core/: __main__.py  config.py  container.py
backend/src/vpn_core/ai_agent/: domain.py  service.py
backend/src/vpn_core/billing_domain/: service.py
backend/src/vpn_core/bot_gateway_domain/: service.py
backend/src/vpn_core/client_subscription_domain/: service.py
backend/src/vpn_core/commerce_domain/: service.py
backend/src/vpn_core/common/: logging_config.py
backend/src/vpn_core/openvpn_sync/: config.py
backend/src/vpn_core/pasarguard_panel_domain/: service.py
backend/tests/: test_client_subscription.py  test_config_traffic.py  test_expiry_enforcement.py  test_openvpn.py  test_openvpn_auth_mode.py  test_openvpn_credential_delivery_service.py  test_openvpn_deactivate_auth.py  test_openvpn_legacy_migration.py  test_openvpn_ovpn_validation.py  test_openvpn_password_rotation.py  test_openvpn_provisioning_auth.py  test_pasarguard_panel.py  test_pasarguard_panel_service.py  test_password_service.py  test_payment_approval.py  test_purchase_callback_routing.py  test_server_capacity.py  test_telegram_bot_common.py  test_traffic_enforcement.py  test_traffic_enforcement_disconnect.py  test_traffic_status_parser_integration.py  test_user_admin.py  test_v2ray.py
docs/: API.md
scripts/migrations/: 001_openvpn_auth_columns.sql
(+196 files in other folders)
