[project]
name = "raya-trade"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-openrouter>=0.2.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
